--- a/index.html
+++ b/index.html
@@ -47,6 +47,9 @@
     <script src="/js/checkform.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
     <script src="http://code.highcharts.com/stock/highstock.js"></script>
+    <script src="https://code.highcharts.com/highcharts-more.js"></script>
+
+
 
 </head>
 <body>
@@ -352,50 +355,52 @@
                             <span class="wc_temp_max_val wc_t_big">{temp.max}</span>
                         </div>
                     </div-->
-                    <div class="mydevider"></div>
-                    <div class="row">
-                        <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 text-center">
-                            <div class="wc_sun_up" style="display: inline-block;"></div>
-                            <span class="wc_sun_up_val wc_t_big">{sunset}</span>
+                    <div class="main_weather">
+                        <div class="mydevider"></div>
+                        <div class="row">
+                            <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 text-center">
+                                <div class="wc_sun_up" style="display: inline-block;"></div>
+                                <span class="wc_sun_up_val wc_t_big">{sunset}</span>
+                            </div>
+                            <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 text-center">
+                                <div class="wc_sun_down" style="display: inline-block;"></div>
+                                <span class="wc_sun_down_val wc_t_big">{dawn}</span>
+                            </div>
                         </div>
-                        <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 text-center">
-                            <div class="wc_sun_down" style="display: inline-block;"></div>
-                            <span class="wc_sun_down_val wc_t_big">{dawn}</span>
+                        <div class="mydevider"></div>
+                        <div class="row">
+                            <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 text-center">
+                                <div class="wc_drop" style="display: inline-block;"></div>
+                                <span class="wc_drop_val wc_t_big">{humidity}</span>
+                            </div>
+                            <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 text-center">
+                                <div class="wc_wind" style="display: inline-block;"></div>
+                                <span class="wc_wind_val wc_t_big">{wind}</span>
+                            </div>
                         </div>
+                        <div class="mydevider"></div>
+                        <div class="row">
+                            <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 text-center">
+                                <div class="wc_baro" style="display: inline-block;"></div>
+                                <span class="wc_baro_val wc_t_big">{pressure}</span>
+                            </div>
+                            <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 text-center">
+                                <div class="wc_compass" style="display: inline-block;"></div>
+                                <span class="wc_wind_dir_val wc_t_big">{wind.dir}</span>
+                            </div>
+                        </div>
+                        <div class="mydevider"></div>
+                        <div class="row">
+                            <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 text-center">
+                                <div class="wc_clouds" style="display: inline-block;"></div>
+                                <span class="wc_clouds_val wc_t_big">{clouds}</span>
+                            </div>
+                            <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 text-center">
+                                <div class="wc_wind_dir" style="display: inline-block;"></div>
+                            </div>
+                        </div>
+                        <div class="mydevider"></div>
                     </div>
-                    <div class="mydevider"></div>
-                    <div class="row">
-                        <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 text-center">
-                            <div class="wc_drop" style="display: inline-block;"></div>
-                            <span class="wc_drop_val wc_t_big">{humidity}</span>
-                        </div>
-                        <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 text-center">
-                            <div class="wc_wind" style="display: inline-block;"></div>
-                            <span class="wc_wind_val wc_t_big">{wind}</span>
-                        </div>
-                    </div>
-                    <div class="mydevider"></div>
-                    <div class="row">
-                        <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 text-center">
-                            <div class="wc_baro" style="display: inline-block;"></div>
-                            <span class="wc_baro_val wc_t_big">{pressure}</span>
-                        </div>
-                        <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 text-center">
-                            <div class="wc_compass" style="display: inline-block;"></div>
-                            <span class="wc_wind_dir_val wc_t_big">{wind.dir}</span>
-                        </div>
-                    </div>
-                    <div class="mydevider"></div>
-                    <div class="row">
-                        <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 text-center">
-                            <div class="wc_clouds" style="display: inline-block;"></div>
-                            <span class="wc_clouds_val wc_t_big">{clouds}</span>
-                        </div>
-                        <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 text-center">
-                            <div class="wc_wind_dir" style="display: inline-block;"></div>
-                        </div>
-                    </div>
-                    <div class="mydevider"></div>
                     <div class="row">
                         <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 text-center">
                             <div class="wind_rose_trend"></div>
@@ -484,6 +489,7 @@
         </div>
 
     </div>
+    <div class="danger_field"></div>
     <div id="fancytemp" class="container"></div>
     <div id="wrapper">
         <div id="container" class="container"></div>
