--- a/index.html
+++ b/index.html
@@ -47,6 +47,9 @@
     <script src="/js/checkform.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
     <script src="http://code.highcharts.com/stock/highstock.js"></script>
+    <script src="https://code.highcharts.com/highcharts-more.js"></script>
+
+
 
 </head>
 <body>
@@ -56,8 +59,8 @@
         <div id="emer_code" class="col-xs-12 col-md-12 col-sm-12 col-lg-12 text-center myhide">ВНИМАНИЕ!!! <span id="emer_code_msg"></span></div>
         <div id="console" class="col-xs-12 col-md-12 col-sm-12 col-lg-12 text-center hideconsole">console started...<br>Loading sources...<br></div>
 
-        <div class="logo col-lg-2 col-md-2 hidden-sm hidden-xs">HELL GAME 2016</div>
-        <div class="logo col-xs-12 visible-xs visible-sm text-center">HELL GAME 2016</div>
+        <div class="logo col-lg-2 col-md-2 hidden-sm hidden-xs">HELL GAME</div>
+        <div class="logo col-xs-12 visible-xs visible-sm text-center">HELL GAME</div>
 
         <div id="widget_uc_ssv" class="user_card_wrapper col-lg-3 col-md-3 col-sm-3 col-xs-5">
             <div class="ssv_card user_card container-fluid">
@@ -152,6 +155,7 @@
                             </h3>
                             <span class="beenonline">Был в сети:</span>
                             <p class="beenonline beenonline_val">00-00-0000 00:00:00</p>
+                            <button class="btn btn-default disabled btn_uc_map">На карте</button>
                         </div>
                         <div class="col-lg-8 col-md-8 col-sm-8 col-xs-12 text-center">
                             <h2 class="uc_login">{USER.Login}</h2>
@@ -181,11 +185,10 @@
                                 <textarea class="uc_email_body form-control" rows="5" placeholder="Введите текст сообщения" disabled></textarea>
                             </div>
                             <button class="btn btn-success disabled">Отправить письмо</button>
-                            <button class="btn btn-default disabled">Карта</button>
                         </div>
                         <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 text-center uc_map_container">
                             <div id="usermap"></div>
-                            <button class="btn btn-default disabled">Сообщение</button>
+                            <button class="btn btn-default disabled btn_uc_msg">Сообщение</button>
                         </div>
                     </div>
                 </div>
@@ -327,7 +330,15 @@
         </div>
 
         <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 text-center"><div id="trend" class="uc_trends transparent"></div></div>
-
+        <div id="hgmap" class="uc_col col-lg-12 col-md-12 col-sm-12 col-xs-12 text-center">
+            <div class="row">
+                <div class="uc_col col-lg-12 col-md-12 col-sm-12 col-xs-12 text-center">
+                    <div class="uc_card">Карта HellGame</div>
+                    <button class="btn btn-danger btn_clshgmap"><i class="fa fa-close"></i>Закрыть</button>
+                    <iframe src="https://www.google.com/maps/d/embed?mid=1TWBleNHM6raePemmYEtRetPZLZ4&hl=ru" width="100%" height="500"></iframe>
+                </div>
+            </div>
+        </div>
         <div id="weather_card" class="uc_col col-lg-12 col-md-12 col-sm-12 col-xs-12 text-center">
             <div class="row">
                 <div class="uc_col col-lg-4 col-md-4 col-sm-4 col-xs-12 text-center">
@@ -335,7 +346,7 @@
                     <button class="btn btn-danger btn_clswc"><i class="fa fa-close"></i>Закрыть</button>
                     <button class="btn btn-default active btn_f_item_more" data-tooltip="Прогноз подробнее"><i class="fa fa-th-list"></i></button>
                     <button class="btn btn-default btn_f_wind" data-tooltip="Сводка по ветру"><i class="fa fa-pie-chart"></i></button>
-                    <button class="btn btn-default btn_f_metar disabled" data-tooltip="METAR сводка"><i class="fa fa-plane"></i></button>
+                    <button class="btn btn-default btn_f_wind_a" data-tooltip="Аналитика ветра"><i class="fa fa-line-chart"></i></button>
                     <div class="wc_weather_icon">
                         <div class="wc_main_temp">{main.temp}</div>
                     </div>
@@ -352,50 +363,52 @@
                             <span class="wc_temp_max_val wc_t_big">{temp.max}</span>
                         </div>
                     </div-->
-                    <div class="mydevider"></div>
-                    <div class="row">
-                        <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 text-center">
-                            <div class="wc_sun_up" style="display: inline-block;"></div>
-                            <span class="wc_sun_up_val wc_t_big">{sunset}</span>
+                    <div class="main_weather">
+                        <div class="mydevider"></div>
+                        <div class="row">
+                            <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 text-center">
+                                <div class="wc_sun_up" style="display: inline-block;"></div>
+                                <span class="wc_sun_up_val wc_t_big">{sunset}</span>
+                            </div>
+                            <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 text-center">
+                                <div class="wc_sun_down" style="display: inline-block;"></div>
+                                <span class="wc_sun_down_val wc_t_big">{dawn}</span>
+                            </div>
                         </div>
-                        <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 text-center">
-                            <div class="wc_sun_down" style="display: inline-block;"></div>
-                            <span class="wc_sun_down_val wc_t_big">{dawn}</span>
+                        <div class="mydevider"></div>
+                        <div class="row">
+                            <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 text-center">
+                                <div class="wc_drop" style="display: inline-block;"></div>
+                                <span class="wc_drop_val wc_t_big">{humidity}</span>
+                            </div>
+                            <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 text-center">
+                                <div class="wc_wind" style="display: inline-block;"></div>
+                                <span class="wc_wind_val wc_t_big">{wind}</span>
+                            </div>
                         </div>
+                        <div class="mydevider"></div>
+                        <div class="row">
+                            <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 text-center">
+                                <div class="wc_baro" style="display: inline-block;"></div>
+                                <span class="wc_baro_val wc_t_big">{pressure}</span>
+                            </div>
+                            <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 text-center">
+                                <div class="wc_compass" style="display: inline-block;"></div>
+                                <span class="wc_wind_dir_val wc_t_big">{wind.dir}</span>
+                            </div>
+                        </div>
+                        <div class="mydevider"></div>
+                        <div class="row">
+                            <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 text-center">
+                                <div class="wc_clouds" style="display: inline-block;"></div>
+                                <span class="wc_clouds_val wc_t_big">{clouds}</span>
+                            </div>
+                            <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 text-center">
+                                <div class="wc_wind_dir" style="display: inline-block;"></div>
+                            </div>
+                        </div>
+                        <div class="mydevider"></div>
                     </div>
-                    <div class="mydevider"></div>
-                    <div class="row">
-                        <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 text-center">
-                            <div class="wc_drop" style="display: inline-block;"></div>
-                            <span class="wc_drop_val wc_t_big">{humidity}</span>
-                        </div>
-                        <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 text-center">
-                            <div class="wc_wind" style="display: inline-block;"></div>
-                            <span class="wc_wind_val wc_t_big">{wind}</span>
-                        </div>
-                    </div>
-                    <div class="mydevider"></div>
-                    <div class="row">
-                        <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 text-center">
-                            <div class="wc_baro" style="display: inline-block;"></div>
-                            <span class="wc_baro_val wc_t_big">{pressure}</span>
-                        </div>
-                        <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 text-center">
-                            <div class="wc_compass" style="display: inline-block;"></div>
-                            <span class="wc_wind_dir_val wc_t_big">{wind.dir}</span>
-                        </div>
-                    </div>
-                    <div class="mydevider"></div>
-                    <div class="row">
-                        <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 text-center">
-                            <div class="wc_clouds" style="display: inline-block;"></div>
-                            <span class="wc_clouds_val wc_t_big">{clouds}</span>
-                        </div>
-                        <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 text-center">
-                            <div class="wc_wind_dir" style="display: inline-block;"></div>
-                        </div>
-                    </div>
-                    <div class="mydevider"></div>
                     <div class="row">
                         <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 text-center">
                             <div class="wind_rose_trend"></div>
@@ -407,9 +420,7 @@
                     <div class="uc_emo">Прогнозируемая</div>
                     <div class="row">
                         <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 text-center">
-                            <div class="forecast_container">
-
-                            </div>
+                            <div class="forecast_container"></div>
                         </div>
                         <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 text-center">
                             <div class="forecast_trend"></div>
@@ -484,6 +495,7 @@
         </div>
 
     </div>
+    <div class="danger_field"></div>
     <div id="fancytemp" class="container"></div>
     <div id="wrapper">
         <div id="container" class="container"></div>
