--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 
 
     <title>DRXT Project HELL GAME</title>
+    <link rel="manifest" href="manifest.json">
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
 
@@ -27,24 +28,35 @@
     <link href='https://fonts.googleapis.com/css?family=Josefin+Sans:400,100,600,700,300' rel='stylesheet' type='text/css'>
     <!-- Latest compiled and minified JavaScript -->
 
+
     <script src="/js/global.js"></script>
     <script src="/js/jquery-1.11.3.js"></script>
     <script src="jquery-ui-1.11.4/jquery-ui.js"></script>
+
     <script src="/js/notifycenter.js"></script>
+
     <script src="/js/auth.js"></script>
+
 	<script src="/js/windcore.js"></script>
     <script src="/js/updater.js"></script>
     <script src="/js/refresher.js"></script>
+
     <script src="/js/start.js"></script>
-    <script src="/js/weatherparser.js"></script>
+
     <script src="/js/color_led.js"></script>
     <script src="/js/trends.js"></script>
+    <script src="/js/weatherparser.js"></script>
+
     <script src="/js/lightbox.js"></script>
+
     <script src="/js/detect.js"></script>
+
     <script src="/js/loadend.js"></script>
 
     <script src="/js/events.js"></script>
     <script src="/js/private.js"></script>
+
+    <script src="/js/router.js"></script>
 
     <!--Google Maps-->
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCGc1IlCuJd173d1Q1685Eya-Cs7NJ5HOU"></script>
@@ -187,13 +199,13 @@
                     <div class="container-fluid">
                         <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 text-center uc_msg_container">
                             <div class="form-group">
-                                <input type="text" class="uc_email_title form-control" maxlength="20" placeholder="Тема" disabled>
+                                <input type="text" class="uc_email_title form-control" maxlength="20" placeholder="Тема">
                             </div>
                             <div class="form-group">
                                 <label>Текст сообщения</label>
-                                <textarea class="uc_email_body form-control" rows="5" placeholder="Введите текст сообщения" disabled></textarea>
+                                <textarea class="uc_email_body form-control" rows="5" placeholder="Введите текст сообщения"></textarea>
                             </div>
-                            <button class="btn btn-success disabled">Отправить письмо</button>
+                            <button class="btn btn-success disabled btn_ucmsg_submit">Отправить письмо</button>
                         </div>
                         <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 text-center uc_map_container">
                             <div id="usermap"></div>
