console added, loading log added

--- a/webalizer/index.html
+++ b/webalizer/index.html
@@ -12,7 +12,7 @@
 <!--   Support the Free Software Foundation   -->
 <!--           (http://www.fsf.org)           -->
 <!--                                          -->
-<!-- *** Generated: 08-Jul-2016 03:00 MSK *** -->
+<!-- *** Generated: 10-Sep-2016 03:00 MSK *** -->
 
 <HTML lang="en">
 <HEAD>
@@ -23,7 +23,7 @@
 <H2>Usage Statistics for hellgame24.ru</H2>
 <SMALL><STRONG>
 Summary by Month<BR>
-Generated 08-Jul-2016 03:00 MSK<BR>
+Generated 10-Sep-2016 03:00 MSK<BR>
 </STRONG></SMALL>
 <CENTER>
 <HR>
@@ -47,17 +47,39 @@ Generated 08-Jul-2016 03:00 MSK<BR>
 <TH ALIGN=center BGCOLOR="#0040ff"><FONT SIZE="-1">Files</FONT></TH>
 <TH ALIGN=center BGCOLOR="#00805c"><FONT SIZE="-1">Hits</FONT></TH></TR>
 <TR><TH HEIGHT=4></TH></TR>
+<TR><TD NOWRAP><A HREF="usage_201609.html"><FONT SIZE="-1">Sep 2016</FONT></A></TD>
+<TD ALIGN=right><FONT SIZE="-1">15200</FONT></TD>
+<TD ALIGN=right><FONT SIZE="-1">11645</FONT></TD>
+<TD ALIGN=right><FONT SIZE="-1">6746</FONT></TD>
+<TD ALIGN=right><FONT SIZE="-1">706</FONT></TD>
+<TD ALIGN=right><FONT SIZE="-1">1859</FONT></TD>
+<TD ALIGN=right><FONT SIZE="-1">4226725</FONT></TD>
+<TD ALIGN=right><FONT SIZE="-1">7065</FONT></TD>
+<TD ALIGN=right><FONT SIZE="-1">67464</FONT></TD>
+<TD ALIGN=right><FONT SIZE="-1">116453</FONT></TD>
+<TD ALIGN=right><FONT SIZE="-1">152008</FONT></TD></TR>
+<TR><TD NOWRAP><A HREF="usage_201608.html"><FONT SIZE="-1">Aug 2016</FONT></A></TD>
+<TD ALIGN=right><FONT SIZE="-1">10838</FONT></TD>
+<TD ALIGN=right><FONT SIZE="-1">7548</FONT></TD>
+<TD ALIGN=right><FONT SIZE="-1">7105</FONT></TD>
+<TD ALIGN=right><FONT SIZE="-1">550</FONT></TD>
+<TD ALIGN=right><FONT SIZE="-1">4169</FONT></TD>
+<TD ALIGN=right><FONT SIZE="-1">7496336</FONT></TD>
+<TD ALIGN=right><FONT SIZE="-1">17069</FONT></TD>
+<TD ALIGN=right><FONT SIZE="-1">220271</FONT></TD>
+<TD ALIGN=right><FONT SIZE="-1">233999</FONT></TD>
+<TD ALIGN=right><FONT SIZE="-1">335993</FONT></TD></TR>
 <TR><TD NOWRAP><A HREF="usage_201607.html"><FONT SIZE="-1">Jul 2016</FONT></A></TD>
-<TD ALIGN=right><FONT SIZE="-1">24317</FONT></TD>
-<TD ALIGN=right><FONT SIZE="-1">17356</FONT></TD>
-<TD ALIGN=right><FONT SIZE="-1">15105</FONT></TD>
-<TD ALIGN=right><FONT SIZE="-1">516</FONT></TD>
-<TD ALIGN=right><FONT SIZE="-1">1479</FONT></TD>
-<TD ALIGN=right><FONT SIZE="-1">7596633</FONT></TD>
-<TD ALIGN=right><FONT SIZE="-1">4129</FONT></TD>
-<TD ALIGN=right><FONT SIZE="-1">120841</FONT></TD>
-<TD ALIGN=right><FONT SIZE="-1">138851</FONT></TD>
-<TD ALIGN=right><FONT SIZE="-1">194540</FONT></TD></TR>
+<TD ALIGN=right><FONT SIZE="-1">16052</FONT></TD>
+<TD ALIGN=right><FONT SIZE="-1">11713</FONT></TD>
+<TD ALIGN=right><FONT SIZE="-1">10024</FONT></TD>
+<TD ALIGN=right><FONT SIZE="-1">581</FONT></TD>
+<TD ALIGN=right><FONT SIZE="-1">4168</FONT></TD>
+<TD ALIGN=right><FONT SIZE="-1">15689379</FONT></TD>
+<TD ALIGN=right><FONT SIZE="-1">18037</FONT></TD>
+<TD ALIGN=right><FONT SIZE="-1">310754</FONT></TD>
+<TD ALIGN=right><FONT SIZE="-1">363106</FONT></TD>
+<TD ALIGN=right><FONT SIZE="-1">497637</FONT></TD></TR>
 <TR><TD NOWRAP><A HREF="usage_201606.html"><FONT SIZE="-1">Jun 2016</FONT></A></TD>
 <TD ALIGN=right><FONT SIZE="-1">5674</FONT></TD>
 <TD ALIGN=right><FONT SIZE="-1">4561</FONT></TD>
@@ -157,35 +179,13 @@ Generated 08-Jul-2016 03:00 MSK<BR>
 <TD ALIGN=right><FONT SIZE="-1">0</FONT></TD>
 <TD ALIGN=right><FONT SIZE="-1">0</FONT></TD>
 <TD ALIGN=right><FONT SIZE="-1">0</FONT></TD></TR>
-<TR><TD NOWRAP><FONT SIZE="-1">Sep 2015</FONT></A></TD>
-<TD ALIGN=right><FONT SIZE="-1">0</FONT></TD>
-<TD ALIGN=right><FONT SIZE="-1">0</FONT></TD>
-<TD ALIGN=right><FONT SIZE="-1">0</FONT></TD>
-<TD ALIGN=right><FONT SIZE="-1">0</FONT></TD>
-<TD ALIGN=right><FONT SIZE="-1">0</FONT></TD>
-<TD ALIGN=right><FONT SIZE="-1">0</FONT></TD>
-<TD ALIGN=right><FONT SIZE="-1">0</FONT></TD>
-<TD ALIGN=right><FONT SIZE="-1">0</FONT></TD>
-<TD ALIGN=right><FONT SIZE="-1">0</FONT></TD>
-<TD ALIGN=right><FONT SIZE="-1">0</FONT></TD></TR>
-<TR><TD NOWRAP><FONT SIZE="-1">Aug 2015</FONT></A></TD>
-<TD ALIGN=right><FONT SIZE="-1">0</FONT></TD>
-<TD ALIGN=right><FONT SIZE="-1">0</FONT></TD>
-<TD ALIGN=right><FONT SIZE="-1">0</FONT></TD>
-<TD ALIGN=right><FONT SIZE="-1">0</FONT></TD>
-<TD ALIGN=right><FONT SIZE="-1">0</FONT></TD>
-<TD ALIGN=right><FONT SIZE="-1">0</FONT></TD>
-<TD ALIGN=right><FONT SIZE="-1">0</FONT></TD>
-<TD ALIGN=right><FONT SIZE="-1">0</FONT></TD>
-<TD ALIGN=right><FONT SIZE="-1">0</FONT></TD>
-<TD ALIGN=right><FONT SIZE="-1">0</FONT></TD></TR>
 <TR><TH HEIGHT=4></TH></TR>
 <TR><TH BGCOLOR="#C0C0C0" COLSPAN=6 ALIGN=left><FONT SIZE="-1">Totals</FONT></TH>
-<TH BGCOLOR="#C0C0C0" ALIGN=right><FONT SIZE="-1">15915402</FONT></TH>
-<TH BGCOLOR="#C0C0C0" ALIGN=right><FONT SIZE="-1">10466</FONT></TH>
-<TH BGCOLOR="#C0C0C0" ALIGN=right><FONT SIZE="-1">224794</FONT></TH>
-<TH BGCOLOR="#C0C0C0" ALIGN=right><FONT SIZE="-1">278673</FONT></TH>
-<TH BGCOLOR="#C0C0C0" ALIGN=right><FONT SIZE="-1">370561</FONT></TH></TR>
+<TH BGCOLOR="#C0C0C0" ALIGN=right><FONT SIZE="-1">35731209</FONT></TH>
+<TH BGCOLOR="#C0C0C0" ALIGN=right><FONT SIZE="-1">48508</FONT></TH>
+<TH BGCOLOR="#C0C0C0" ALIGN=right><FONT SIZE="-1">702442</FONT></TH>
+<TH BGCOLOR="#C0C0C0" ALIGN=right><FONT SIZE="-1">853380</FONT></TH>
+<TH BGCOLOR="#C0C0C0" ALIGN=right><FONT SIZE="-1">1161659</FONT></TH></TR>
 <TR><TH HEIGHT=4></TH></TR>
 </TABLE>
 </CENTER>
