--- a/index.html
+++ b/index.html
@@ -30,12 +30,16 @@
 
 
     <script src="/js/global.js"></script>
+
     <script src="/js/jquery-1.11.3.js"></script>
     <script src="jquery-ui-1.11.4/jquery-ui.js"></script>
+
+    <script src="/js/console.js"></script>
 
     <script src="/js/notifycenter.js"></script>
 
     <script src="/js/auth.js"></script>
+    <script src="/js/storage.js"></script>
 
 	<script src="/js/windcore.js"></script>
     <script src="/js/updater.js"></script>
@@ -78,7 +82,7 @@
     <div id="header" class="container-fluid headerdark">
         <div id="sysmsg" class="col-xs-12 col-md-12 col-sm-12 col-lg-12 text-center myhide">Системное сообщение: <span id="sysmsg_val"></span></div>
         <div id="emer_code" class="col-xs-12 col-md-12 col-sm-12 col-lg-12 text-center myhide">ВНИМАНИЕ!!! <span id="emer_code_msg"></span></div>
-        <div id="console" class="col-xs-12 col-md-12 col-sm-12 col-lg-12 text-center hideconsole">console started...<br>Loading sources...<br></div>
+        <div id="console" class="col-xs-12 col-md-12 col-sm-12 col-lg-12 hideconsole">console started...<br>Loading sources...<br></div>
 
         <div class="logo col-lg-2 col-md-2 hidden-sm hidden-xs">HELL GAME</div>
         <div class="logo col-xs-12 visible-xs visible-sm text-center">HELL GAME</div>
